--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="pt-BR">
 <head>
    <meta charset="UTF-8">
@@ -9,33 +9,105 @@
    <link rel="stylesheet" href="style.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap" rel="stylesheet">
   
 </head>
 <body>
+
    <main>
        <div class="passo ativo" id="passo-0">
-         <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las</p>
-       <button class="btn-proximo" data-proximo="1">Coréia do Sul</button>
-       <button class="btn-proximo" data-proximo="2">Itália</button>
+           <img src="cenários.webp" alt="">
+           <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las</p>
+           <button class="btn-proximo" data-proximo="1">Coréia do Sul</button>
+           <button class="btn-proximo" data-proximo="2">Itália</button>
 
 
        </div>
 
 
        <div class="passo" id="passo-1">
-           <p>Você começa subindo no ponto mais alto da Torre Eiffel</p>
-           <button class="btn-proximo" data-proximo="3">Procurar pista no topo do Monte</button>
-           <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa </button>
+        <p>Você começa subindo no ponto mais alto da Torre Eiffel</p>
+        <button class="btn-proximo" data-proximo="3">Procurar pista no topo do Monte</button>
+        <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
        </div>
 
+       <div class="passo" id="passo-2">
+        <p>Na itália você começa visitando a Torre de Pisa à trabalho.</p>
+        <button class="btn-proximo" data-proximo="5">Investigar a Máfia</button>
+        <button class="btn-proximo" data-proximo="6">Passear e esquecer o trabalho</button>
+    </div>
+
+
+    <div class="passo"id="passo-3">
+        <p>Você continua e encontra ossos soterrados na neve.</p>
+        <button class="btn-proximo" data-proximo="7">então você volta pra cabana</button>
+    </div>
+
+
+    <div class="passo"id="passo-4">
+        <img src="Cabana.webp" alt="imagem Desistir e voltar para casa">
+     <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria encontrado.</p>
+    </div>
+
+
+    <div class="passo"id="passo-5">
+     <p>você vai encontrar uma gangue de muitos mafiosos</p>
+     <button class="btn-proximo" data-proximo="7">então você volta pra cabana</button>
+    </div>
+
+
+    <div class="passo"id="passo-6">
+    <p>você encontra uma linda estrada de flores</p>
+    <button class="btn-proximo" data-proximo="8">você se diverte</button>
+    </div>
+
+
+    <div class="passo"id="passo-7">
+    <p>No topo do Monte, você encontra uma cabana abandonada e que aparentemente é habitada.</p>
+    <button class="btn-proximo" data-proximo="9">Seguir em direção a cabana</button>
+    <button class="btn-proximo" data-proximo="10">voltar, fingir não ter visto</button>
+    </div>
+
+
+    <div class="passo"id="passo-8">
+        <p>E encontra várias outras coisas divertidas para fazer.</p>
+        <button class="btn-proximo" data-proximo="7">e volta pra coreia</button>
+    </div>
+
+
+    <div class="passo"id="passo-9">
+    <p>chegando lá, você encontra potes de vidros com órgãos e sangue</p>
+    <button class="btn-proximo" data-proximo="11">Explorar a cabana</button>
+    </div>
+
+
+    <div class="passo"id="passo-10">
+        <p>Na volta, você encontra um homem de preto subindo o Monte</p>
+        <button class="btn-proximo" data-proximo="12">Retornar a subir</button>
+    </div>
+
+
+    <div class="passo"id="passo-11">
+        <img src="Casa.png" alt="Explorar a Catedral.">
+        <p>Dentro da cabana,você encontra marcas de rastejos pelo chão e um odor forte que possa se de um “cadáver”.</p>
+    </div>
+
+
+    <div class="passo"id="passo-12">
+    <p>Você segue esse homem suspeito e ele entra na cabana</p>
+    <button class="btn-proximo" data-proximo="11">Explorar a Catedral.</button>
+    </div>
 
 
 
 
 
-   </main>
-   
-   <script src="script.js"></script>
+
+</main>
+
+<script src="script.js"></script>
 </body>
 </html>
+
+
+
